[package]
name = "spoterm"
version = "0.1.0"
authors = ["Hitoshi Togasaki <hitoshi@soundhound.com>"]
edition = "2018"

license = "MIT"
description = "The spotify terminal client"
keywords = ["tui", "spotify"]

[dependencies]
tui = "0.5"
termion = "1.5"
rspotify = "0.7.0"
serde = "1.0.94"
toml = "0.5.1"
dirs = "1.0"
failure = "0.1.5"
log = "0.4.0"
log4rs = "0.8.3"
rpassword = "3.0.2"
hostname = "^0.1"
itertools = "0.8"
unicode-width = "0.1"
crossbeam = "0.7"
